ironing out a few alignment issues

--- a/html/styles.css
+++ b/html/styles.css
@@ -62,14 +62,18 @@ section.page {
   position: relative;
   display: block;
   left: 3em;
+  width: 34em;
   text-indent: -1.5em;
   font-style: italic;
   font-weight: normal;
 }
 
 .edm-date {
+  position: relative;
   display: block;
-  float: right;
+  width: 4em;
+  left: 34em;
+  top: -1em;
   padding-left: 1em;
   text-align: right;
 }
